# expiringdictx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: release.yml  test.yml
expiringdictx/: __init__.py  expire.py  simple.py
tests/: test_expire.py  test_simple.py
